--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy:github": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy:github": "gatsby build && gh-pages -d public -b master"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
